# opencode-nexus

./: .actrc  .cargo.toml  .credentials.example  .editorconfig  .env.ios  .eslintrc.cjs  .gitignore  .licenserc.yaml  .prettierrc  .secrets.local.example  AGENTS.md  AuthKey_J94Q923ZNG.p8  CERTIFICATE_PASSWORD_INSTRUCTIONS.md  CHANGELOG.md  CHAT_APP_DEPLOYMENT_READY.md  CICD_INFRASTRUCTURE_FIXES_SUMMARY.md  CI_CD_FIXES_COMPLETE.md  CLAUDE.md  CLOUDFLARE_PROXY_SETUP.md  COMPLIANCE_AUTOMATION_COMPLETE.md  COMPREHENSIVE_CHAT_BUG_TESTING_REPORT.md  CONNECTION_MANAGER_ANALYSIS.md  CONNECTION_MANAGER_COMPLETE.md  CONTRIBUTING.md  CRITICAL_BUGS_FIXED_REPORT.md  CURRENT_STATUS.md  Caddyfile  DAY2_INDEX.md  DAY2_PLAN.md  DAY2_QUICK_REFERENCE.md  DEPLOYMENT_READY_REPORT.md  DEVELOPMENT_STATUS.md  DOCUMENTATION_CREATED_TODAY.md  DOGFOOD.md  E2E_CHAT_TEST_REPORT.md  E2E_CHAT_TEST_SUMMARY.txt  E2E_COMPLETION_SUMMARY.md  E2E_FINAL_REPORT.txt  GET_APPSTORE_PROFILE.md  GITHUB_SECRETS_STATUS.md  (+123 more)
.github/hooks/: pre-commit  pre-push
.github/workflows/: DISABLED-xcode-cloud-not-supported.md  cleanup-artifacts.yml  comprehensive-testing.yml  cost-tracking.yml  ios-build-enhanced.yml  ios-release-fixed.yml  ios-release-optimized.yml  ios-release.yml  license-check.yml  quality-gate.yml  release.yml  runner-detection.yml  runner-health-check.yml  security-scan.yml  socket-security.yml  test-backend.yml  test-frontend.yml  test-integration.yml  test-mobile-e2e.yml  test-workflow.yml
.opencode/: opencode.jsonc
.opencode/agent/: astro-svelte-agent.md  mcp-integration-agent.md  tauri-integration-agent.md
ci_scripts/: build_rust_code.sh  build_rust_code_enhanced.sh  ci_post_clone.sh  ci_post_clone_enhanced.sh  ci_pre_xcodebuild.sh  pre_xcode_build.sh  pre_xcode_build_enhanced.sh
docs/: AGENTS.md  ARCHITECTURE.md  DEVOPS.md  MVP_COMPLETION_PLAN.md  ONBOARDING.md  PRD.md  SDK_INTEGRATION_MIGRATION.md  SDK_INTEGRATION_TESTING.md  SECURITY.md  SOCKET_SETUP.md  TESTING.md  USER-FLOWS.md  iOS_DEPLOYMENT_GUIDE.md  ios-build-development-guide.md  ios-build-troubleshooting.md
docs/archive/: DEVOPS.md  INTEGRATION_GAPS.md  PRD.md  PWA_IMPLEMENTATION.md  USER-FLOWS.md
docs/client/: ANALYSIS_INDEX.md  ARCHITECTURE.md  AUTH_SETUP.md  CONNECTION-SETUP.md  EXACT_FIXES.md  PHASE1_FIXES.md  PRD.md  README.md  RUST_ARCHITECTURE.md  SECURITY.md  TESTING.md  USER-FLOWS.md
docs/deployment/: GITHUB_SECRETS_SETUP.md  IOS_BUILD_WITH_PRIVACY.md  IOS_CI_CD_IMPLEMENTATION_PLAN.md  IOS_CI_CD_IMPLEMENTATION_SUMMARY.md  IOS_CI_CD_QUICK_REFERENCE.md  IOS_PRIVACY_COMPLIANCE.md  IOS_RELEASE.md  README.md  RELEASE_CHECKLIST.md
docs/operations/: CI_CD_COSTS.md  RUNNER_MONITORING.md  RUNNER_OPERATIONS.md  WORKFLOW_RUNNER_AUDIT.md
docs/research/: 2025-09-26-authentication-system-research.md  2025-12-01-ios-build-keychain-error-analysis.md  2025-12-03-github-actions-testing-best-practices.md  2025-12-06-rust-backend-compilation-failure-analysis.md  2025-12-08-ios-crash-analysis.md
docs/testing/: github-actions-guide.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  Dockerfile.e2e  Dockerfile.test  MOBILE_TESTING_CHECKLIST.md  SENTRY_SETUP.md  astro.config.mjs  bunfig.toml  index.html  package.json  playwright.android.config.ts  playwright.config.ts  playwright.ios.config.ts  playwright.mobile.config.ts  sentry.client.config.ts  sentry.server.config.ts  test-debug.js  test-debug.mjs  test-output.txt  test-tauri-debug.html  tsconfig.json
frontend/e2e/: README.md  app-flows.spec.ts  authentication.spec.ts  chat-connection-test.spec.ts  chat-debug.spec.ts  chat-full-flow.spec.ts  chat-functionality.spec.ts  chat-interface.spec.ts  chat-manual-test.spec.ts  chat.spec.ts  connection.spec.ts  critical-flows.spec.ts  dashboard.spec.ts  debug-auth.spec.ts  debug-initialization.spec.ts  environment-debug.spec.ts  full-flow.spec.ts  global-setup.ts  global-teardown.ts  model-selector.spec.ts  onboarding.spec.ts  performance.spec.ts  sdk-integration.spec.ts  server-management.spec.ts  (+2 more)
header-templates/: MIT.txt
plans/: 2025-12-01-ios-build-fix-summary.md  2025-12-01-ios-build-fix.md  2025-12-01-ios-build-reliability.md  2025-12-03-cicd-failure-resolution-plan.md  2025-12-03-cocoapods-pbxproj-fix.md  2025-12-03-comprehensive-problems-resolution-plan.md  2025-12-03-github-actions-testing-implementation-plan.md  2025-12-05-cicd-integration-test-fixes.md  2025-12-05-e2e-test-completion-summary.md  2025-12-05-e2e-test-completion.md  2025-12-06-100-percent-test-pass-rate-policy.md  2025-12-08-ios-crash-fix-implementation-plan.md  unwrap-fix-critical-ios-crash-prevention.md
qrcodes/: CONNECTION_SUMMARY.md  mobile-config.json
scripts/: README.md  build-ios-archive.sh  build-with-error-handling.sh  bump-version.js  deploy-testflight.sh  install-provisioning-profile.sh  ios-dev.sh  measure-build-performance.sh  pre-warm-deps.sh  runner-health-check.sh  runner-monitor.sh  runner-restart.sh  setup-local-secrets.sh  setup-xcode-cloud.sh  test-ios-build.sh  upload-testflight.sh  validate-ios-env.sh  validate-workflows.sh  verify-signing-assets.sh
src-tauri/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.test  build.rs  tauri.conf.json  tauri.ios.conf.json
src-tauri/.cargo/: config.toml
src-tauri/ios-config/: ExportOptions.plist  Podfile  README.md  src-tauri_iOS.entitlements
src-tauri/src/: api_client.rs  auth.rs  chat_client.rs  chat_client_example.rs  chat_manager.rs  connection_manager.rs  error.rs  event_bridge.rs  lib.rs  main.rs  message_stream.rs  model_manager.rs  onboarding.rs  server_manager.rs  session_manager.rs  streaming_client.rs  tests.rs  web_server_manager.rs
src-tauri/src/tests/: mod.rs  tunnel_integration_tests.rs
status_docs/: CURRENT_STATUS.md  GITHUB_PROJECT_BOARD_SYNC_PLAN.md  MVP_ROADMAP.md  NEXT_SESSION_BRIEFING.md  PHASE_2_3_PLAN.md  PROJECT_SYNC_SUMMARY.md  TODO.md
thoughts/: implementation-decisions.md
(+194 files in other folders)
