[package]
name = "src-tauri"
version = "1.0.0-mvp"
description = "OpenCode Nexus - Desktop application for managing OpenCode servers with secure remote access"
authors = ["f3rg-codes"]
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "src_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sentry = "0.42.0"
sentry-anyhow = "0.42.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2.1"
futures-util = "0.3"
futures = "0.3"
sysinfo = "0.30"
# Web server dependencies for Phase 1
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio-tungstenite = "0.21"
hyper = { version = "1.0", features = ["full"] }
jsonwebtoken = "9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

[dev-dependencies]
tempfile = "3"

