[package]
name = "src-tauri"
version = "0.1.30"
description = "OpenCode Nexus - Desktop application for managing OpenCode servers with secure remote access"
authors = ["f3rg-codes"]
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# iOS-specific release profile for smaller app sizes
[profile.release-ios]
inherits = "release"
opt-level = "s"  # Optimize for size on iOS
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "src_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
anyhow = "1"
dirs = "5"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sentry = "0.42.0"
sentry-anyhow = "0.42.0"
url = "2.5"
urlencoding = "2.1"
futures-util = "0.3"
futures = "0.3"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# Note: Frontend now uses @opencode-ai/sdk directly for all chat operations

# Development dependencies for better debugging
[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

[target.'cfg(target_os = "ios")'.dependencies]
# Core iOS support for Tauri 2.x
# Note: iOS-specific plugins will be added as they become available
mobile-entry-point = "0.1"

# Objective-C bindings for iOS compatibility (when available)
# objc2 = "0.5"  # Commented out until needed
# objc2-ui-kit = "0.2"  # Commented out until needed
# objc2-foundation = "0.2"  # Commented out until needed

# iOS logging and debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
tracing-test = "0.2"

